organize L8 work; -Copy1 -> _workbook

--- a/dev_course/dl2/00_exports_workbook.ipynb
+++ b/dev_course/dl2/00_exports_workbook.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "!python notebook2script.py 00_exports-Copy1.ipynb"
+    "!python notebook2script.py 00_exports_workbook.ipynb"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "d = json.load(open('00_exports-Copy1.ipynb','r'))['cells']"
+    "d = json.load(open('00_exports_workbook.ipynb','r'))['cells']"
    ]
   },
   {
