--- a/dev_course/dl2/01_matmul_workbook.ipynb
+++ b/dev_course/dl2/01_matmul_workbook.ipynb
@@ -1954,7 +1954,7 @@
     }
    ],
    "source": [
-    "!python notebook2script.py 01_matmul-Copy1.ipynb"
+    "!python notebook2script.py 01_matmul_workbook.ipynb"
    ]
   },
   {
